--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "express-js-bootstrap",
+  "name": "TrainingProject",
   "version": "0.1.0",
-  "description": "Kickoff for ExpressJS applications",
+  "description": "Training",
   "engines": {
     "node": "8.9.4",
     "npm": "2.14.2"
@@ -29,15 +29,14 @@
   ],
   "main": "app.js",
   "author": "Wolox",
-  "homepage": "https://github.com/Wolox/express-js-bootstrap",
+  "homepage": "https://github.com/Wolox/TrainingProject",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Wolox/express-js-bootstrap.git"
+    "url": "https://github.com/Wolox/TrainingProject.git"
   },
   "bugs": {
-    "url": "https://github.com/Wolox/express-js-bootstrap/issues",
-    "email": "tls@wolox.com.ar"
+    "url": "https://github.com/Wolox/TrainingProject/issues"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
