--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "express": "^4.16.2",
     "jwt-simple": "^0.5.1",
     "morgan": "^1.9.0",
-    "pg": "^7.4.1",
+    "node-fetch": "^2.1.2",
+    "pg": "^7.4.3",
     "pg-native": "^2.2.0",
     "rollbar": "^2.3.9",
     "sequelize": "^4.34.0",
+    "simple-mock": "^0.8.0",
     "umzug": "^2.1.0",
     "winston": "^2.4.0",
     "winston-daily-rotate-file": "^1.7.2"
