--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "express": "^4.16.2",
     "jwt-simple": "^0.5.1",
     "morgan": "^1.9.0",
+    "nock": "^9.4.2",
     "node-fetch": "^2.1.2",
     "pg": "^7.4.3",
     "pg-native": "^2.2.0",
