--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "date-and-time": "^0.6.2",
     "express": "^4.16.2",
     "jwt-simple": "^0.5.1",
+    "mockdate": "^2.0.2",
     "moment": "^2.22.2",
     "morgan": "^1.9.0",
     "nock": "^9.4.2",
