--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "simple-mock": "^0.8.0",
     "time": "^0.12.0",
     "umzug": "^2.1.0",
+    "uuid": "^3.3.2",
     "winston": "^2.4.0",
     "winston-daily-rotate-file": "^1.7.2"
   },
